<resources>
    <string name="app_name">Viagens</string>
    <string name="action_settings">Settings</string>
    <string name="name">Nome</string>
    <string name="password">Senha</string>
    <string name="login">Entrar</string>
    <string name="singup">Criar conta</string>
    <string name="singup2">Não possui conta? Cadastre-se</string>
    <string name="login2">Já possui conta? Faça login</string>
    <string name="email">Email</string>
    <string name="address">Endereço</string>
    <string name="lastname">Sobrenome</string>
    <string name="logout">Sair</string>
    <string name="save">Salvar</string>
    <string name="dateReturn">Data retorno</string>
    <string name="date">Data partida</string>
    <string name="place">Local</string>
    <string name="editInfo">Editar perfil</string>
</resources>
